--- a/about.html
+++ b/about.html
@@ -199,22 +199,22 @@
                         <div class="Menu-subnav">
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="strategy.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Strategy">Strategy</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="interface-design.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Design">Design</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="technology-development.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Development">Development</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="digital-marketing.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Marketing">Marketing</span></span></a>
                             </div>
                         </div>
@@ -282,10 +282,9 @@
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper about-bg-gre">
                 <!--top  Section-->
-                <section class="black-bg about-us-section" data-humcolor="#000">
+                <section class="about-us-section" data-humcolor="#000">
                     <div class="about-us-inner d-flex" id="scroll-direction">
-                        <div id="test"></div>
-                        <div class="about-us-image" data-scroll data-scroll-sticky
+                        <div class="about-us-image move" data-scroll data-scroll-sticky
                             data-scroll-target="#scroll-direction"> <img data-scroll
                                 src="/assets/resources/img/about-shape.svg" alt="" title="" />
                         </div>
@@ -337,19 +336,7 @@
                 <!-- About Section -->
                 <section id="about2" class="chnage" data-humcolor="#000">
                     <div class="container">
-
                         <div class="about-f">
-                            <!-- <div class="about-p">
-                                <p>We believe design can save the world, <br><span
-                                        style="font-family: Ageo-BoldItalic;">not
-                                        just
-                                        make it look</span>
-                                </p>
-                            </div>
-                            <div class="big-h">
-                                <h1 class="re" data-splitting> Damn G✺✺d!
-                                </h1>
-                            </div> -->
                             <img src="/assets/resources/img/good-section.svg" alt="" />
                         </div>
                     </div>
@@ -384,7 +371,7 @@
                     <div class="container">
                         <div id="abt" data-scroll>
                             <div>
-                                <div data-scroll class="why">
+                                <div data-scroll class="why move">
                                     <img src="/assets/resources/img/why-us.svg" alt="" />
                                     <div>
                                         <div class="flex text_anim">
@@ -2232,7 +2219,7 @@
                             </div>
                         </div>
                         <div class="bottom-footer">
-                            <p>© 2021 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.</p>
+                            <p>© 2022 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.</p>
                         </div>
                     </div>
                 </footer>
