--- a/patronum.html
+++ b/patronum.html
@@ -193,22 +193,22 @@
                         <div class="Menu-subnav">
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="strategy.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Strategy">Strategy</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="interface-design.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Design">Design</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="technology-development.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Development">Development</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="digital-marketing.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Marketing">Marketing</span></span></a>
                             </div>
                         </div>
