--- a/services-details.html
+++ b/services-details.html
@@ -194,16 +194,24 @@
                         </a>
                         <div class="Menu-subnav">
                             <div class="sub-nav">
-                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="services-details.html"><span class="cb-outro-social-item-title"><span data-text="Strategy">Strategy</span></span></a>
+                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
+                                    href="strategy.html"><span class="cb-outro-social-item-title"><span
+                                            data-text="Strategy">Strategy</span></span></a>
                             </div>
                             <div class="sub-nav">
-                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="services-details.html"><span class="cb-outro-social-item-title"><span data-text="Design">Design</span></span></a>
+                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
+                                    href="interface-design.html"><span class="cb-outro-social-item-title"><span
+                                            data-text="Design">Design</span></span></a>
                             </div>
                             <div class="sub-nav">
-                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="services-details.html"><span class="cb-outro-social-item-title"><span data-text="Development">Development</span></span></a>
+                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
+                                    href="technology-development.html"><span class="cb-outro-social-item-title"><span
+                                            data-text="Development">Development</span></span></a>
                             </div>
                             <div class="sub-nav">
-                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque" href="services-details.html"><span class="cb-outro-social-item-title"><span data-text="Marketing">Marketing</span></span></a>
+                                <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
+                                    href="digital-marketing.html"><span class="cb-outro-social-item-title"><span
+                                            data-text="Marketing">Marketing</span></span></a>
                             </div>
                         </div>
                     </div>
@@ -394,7 +402,7 @@
                             </div>
                         </div>
                         <div class="bottom-footer">
-                            <p>© 2021 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.</p>
+                            <p>© 2022 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.</p>
                         </div>
                     </div>
                 </footer>
