--- a/strategy.html
+++ b/strategy.html
@@ -197,22 +197,22 @@
                         <div class="Menu-subnav">
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="strategy.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Strategy">Strategy</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="interface-design.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Design">Design</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="technology-development.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Development">Development</span></span></a>
                             </div>
                             <div class="sub-nav">
                                 <a class="cb-outro-social-item sub-navlink" data-cursor="-opaque"
-                                    href="services-details.html"><span class="cb-outro-social-item-title"><span
+                                    href="digital-marketing.html"><span class="cb-outro-social-item-title"><span
                                             data-text="Marketing">Marketing</span></span></a>
                             </div>
                         </div>
@@ -308,6 +308,8 @@
                         <div class="flex-con align-center ">
                             <div class="left-d">
                                 <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                                    <span> <img src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                                    </span>
                                     At Enigma, strategic planning based on insight is the starting point of everything
                                     we do. We consider a sound Digital Strategy to be the backbone of every brand’s
                                     online presence. Using a blend of strategic thinking, broad marketing experience,
@@ -493,22 +495,22 @@
                             data-cursor-text="Contact Us" data-cursor="-color-white -xlg">
 
                             <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
+                                LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
+                                LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
+                                LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
+                                LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
+                                LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
                             </div>
                             <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
+                                LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
                             </div>
                         </div>
                     </a>
@@ -582,7 +584,7 @@
                             </div>
                         </div>
                         <div class="bottom-footer">
-                            <p>© 2021 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.</p>
+                            <p>© 2022 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.</p>
                         </div>
                     </div>
                 </footer>
