--- a/index.html
+++ b/index.html
@@ -625,6 +625,7 @@
                             <h2 class="works__hero__line">We Create Digital
                             </h2>
                         </div> -->
+
                         <div class="text-left">
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
                                 data-scroll-speed="2">We Design</h2>
@@ -674,20 +675,26 @@
                         <div class="about-us-images res"> <img class="prlx" src="/assets/resources/img/about.png" alt=""
                                 title="" />
                         </div>
+
                         <div class="about-us-content">
                             <div class="welcome-heading d-flex justify-content-sb align-items-start">
-                                <h1 data-textcolor="#000" style="color:#000000;"> <span class="opacity-0" data-scroll
-                                        data-scroll-delay="0.1" data-scroll-offset="60">WE</span><br /> <span
+                                <h1 data-textcolor="#000" style="color:#000000; font-size: 3.1em; text-transform: uppercase;
+                            "> <span class="opacity-0" data-scroll data-scroll-delay="0.1" data-scroll-offset="60">we
+                                        are charting</span><br />
+                                    <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60"><em>the unknown</em></span><br /> <span
                                         class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60"><em>SAVE</em></span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">BUSINESSES</span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">FROM </span><br />
+                                        data-scroll-offset="60">territory and</span><br /> <span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60"> mapping the
+                                    </span><br />
                                     <span class="opacity-0" data-scroll data-scroll-delay="0.1"
                                         data-scroll-offset="60">UGLY & INEPT </span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">DIGITAL
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">digital future
                                     </span><br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60"><em>PRODUCTS </em></span>
+                                        data-scroll-offset="60"><em>or
+                                            visionaries who</em></span><br><span class="opacity-0" data-scroll
+                                        data-scroll-delay="0.1" data-scroll-offset="60"><em>or
+                                            lead meaningful brands. </em></span>
                                 </h1>
                             </div>
                         </div>
