--- a/index.html
+++ b/index.html
@@ -686,14 +686,13 @@
                                         class="opacity-0" data-scroll data-scroll-delay="0.1"
                                         data-scroll-offset="60">territory and</span><br /> <span class="opacity-0"
                                         data-scroll data-scroll-delay="0.1" data-scroll-offset="60"> mapping the
-                                    </span><br />
-                                    <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">UGLY & INEPT </span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">digital future
+                                    </span>
+                                    <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">digital future
                                     </span><br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60"><em>or
+                                        data-scroll-offset="60"><em>for
                                             visionaries who</em></span><br><span class="opacity-0" data-scroll
-                                        data-scroll-delay="0.1" data-scroll-offset="60"><em>or
+                                        data-scroll-delay="0.1" data-scroll-offset="60"><em>
                                             lead meaningful brands. </em></span>
                                 </h1>
                             </div>
