--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                             <div data-navigate="scroll" class="a-recent-works dark">
 
                                 <!--Background Text-->
-                                <div style="color: rgba(25,27,29,.2)" class="recent-works-bg-text">
+                                <div class="recent-works-bg-text">
                                     success stories
                                 </div>
                                 <!--Background Text-->
@@ -896,24 +896,23 @@
                                     <div class="ar-work">
 
                                         <!--Project URL-->
-                                        <a href="">
+                                        <a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
+                                            data-tilt-speed="100">
 
                                             <!--Project Image-->
-                                            <div class="ar-work-image" data-tilt data-tilt-glare="true"
-                                                data-tilt-max="10" data-tilt-speed="80">
+                                            <div class="ar-work-image">
                                                 <img alt="Project Image" src="/assets/resources/img/work-patronum.png">
                                             </div>
                                             <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title">Spirits of #illusion</div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat">Production</div>
-                                            <!--/Project Category-->
-
                                         </a>
+
+                                        <!--Project Title-->
+                                        <div class="ar-work-title">Spirits of #illusion</div>
+                                        <!--/Project Title-->
+
+                                        <!--Project Category-->
+                                        <div class="ar-work-cat">Production</div>
+                                        <!--/Project Category-->
 
                                     </div>
                                     <!--/Project-->
@@ -921,7 +920,8 @@
                                     <!--Project-->
                                     <div class="ar-work">
 
-                                        <!--Project URL--><a href="">
+                                        <!--Project URL--><a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
+                                            data-tilt-speed="100">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image">
