--- a/index.html
+++ b/index.html
@@ -556,8 +556,9 @@
                                         </div>
                                     </div>
                                     <div class="c-hm-us_s2">
-                                        <h4 class="t-lead">Ready To Explore How<br> We Can Work Together<br> To Create
-                                            Something <br>Extraordinary?</h4>
+                                        <h4 class="t-lead">Think We're The Right <br> Partners To Bring Your Idea<br>To
+                                            Life
+                                            Or Take Your<br>Brand To The Next level?</h4>
                                         <div class="c-hm-us_title">
                                             <h2 class="t-d3-fluid cta" data-magnetic data-cursor="-opaque"> <a><span>
                                                         Say, Hello! 👋
@@ -596,8 +597,8 @@
                                     </div>
                                 </div>
                                 <div class="c-hm-us_s2">
-                                    <h4 class="t-lead">Ready To Explore How<br> We Can Work Together<br> To Create
-                                        Something <br>Extraordinary?</h4>
+                                    <h4 class="t-lead">Think We're The Right <br> Partners To Bring Your Idea<br>To Life
+                                        Or Take Your<br>Brand To The Next level?</h4>
                                     <div class="c-hm-us_title">
                                         <h2 class="t-d3-fluid cta" data-magnetic data-cursor="-opaque"> <a><span>
                                                     Say, Hello! 👋
@@ -628,11 +629,11 @@
 
                         <div class="text-left">
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
-                                data-scroll-speed="2">We Design</h2>
+                                data-scroll-speed="2">We deliver</h2>
                         </div>
                         <div>
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
-                                data-scroll-speed="-3">Inspirational </h2>
+                                data-scroll-speed="-3">captivating </h2>
                         </div>
                         <!-- <div class="smm">
                             <h2 class="works__hero__line"> that
@@ -647,7 +648,7 @@
 
                         <div class=" text-left ">
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
-                                data-scroll-speed="-8"> Delightful</h2>
+                                data-scroll-speed="-8"> incredible</h2>
                         </div>
                         <div>
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
@@ -660,14 +661,14 @@
                 </div>
                 <!-- sdh -->
                 <!-- About Section -->
-                <section id="about2" class="chnage" data-humcolor="#000">
+                <!-- <section id="about2" class="chnage" data-humcolor="#000">
                     <div class="container">
 
                         <div class="about-f">
                             <img src="/assets/resources/img/good-section.svg" alt="" />
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- end -->
 
                 <section class="about-us-section" data-humcolor="#000">
@@ -679,21 +680,29 @@
                         <div class="about-us-content">
                             <div class="welcome-heading d-flex justify-content-sb align-items-start">
                                 <h1 data-textcolor="#000" style="color:#000000; font-size: 3.1em; text-transform: uppercase;
-                            "> <span class="opacity-0" data-scroll data-scroll-delay="0.1" data-scroll-offset="60">we
-                                        are charting</span><br />
+                            "> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">Leveraging the power</span><br />
                                     <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60"><em>the unknown</em></span><br /> <span
-                                        class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">territory and</span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60"> mapping the
+                                        data-scroll-offset="60">of emotion,</span><br /> <span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">consumer
+                                        psychology,</span><br /> <span class="opacity-0" data-scroll
+                                        data-scroll-delay="0.1" data-scroll-offset="60"> and technology,
                                     </span>
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">digital future
+                                        data-scroll-offset="60">we create
                                     </span><br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60"><em>for
-                                            visionaries who</em></span><br><span class="opacity-0" data-scroll
-                                        data-scroll-delay="0.1" data-scroll-offset="60"><em>
-                                            lead meaningful brands. </em></span>
+                                        data-scroll-offset="60">digital brand </span><br><span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">experiences
+                                        that</span><br><span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">propel your</span><br><span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">success in the
+                                    </span>
+                                    <br><span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">enigmatic realm
+                                    </span>
+                                    <br><span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">of bits & bytes.
+                                    </span>
                                 </h1>
                             </div>
                         </div>
@@ -897,7 +906,8 @@
 
                                         <!--Project URL-->
                                         <a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
-                                            data-tilt-speed="100">
+                                            data-tilt-speed="20" data-cursor-text="View"
+                                            data-cursor=" -color-accent-lilac">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image">
@@ -921,77 +931,73 @@
                                     <div class="ar-work">
 
                                         <!--Project URL--><a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
-                                            data-tilt-speed="100">
+                                            data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-cert">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image">
                                                 <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
                                             </div>
                                             <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title">The Secrets</div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat">Photography</div>
-                                            <!--/Project Category-->
-
                                         </a>
+                                        <!--Project Title-->
+                                        <div class="ar-work-title">The Secrets</div>
+                                        <!--/Project Title-->
 
+                                        <!--Project Category-->
+                                        <div class="ar-work-cat">Photography</div>
+                                        <!--/Project Category-->
                                     </div>
                                     <!--/Project-->
 
                                     <!--Project-->
                                     <div class="ar-work">
 
-                                        <!--Project URL--><a href="">
+                                        <!--Project URL--><a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
+                                            data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-dmtca">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image">
                                                 <img alt="Project Image" src="./assets/resources/img/work-dmtca.png">
                                             </div>
                                             <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title">Emerald Planet</div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat">Photography</div>
-                                            <!--/Project Category-->
-
                                         </a>
+                                        <!--Project Title-->
+                                        <div class="ar-work-title">Emerald Planet</div>
+                                        <!--/Project Title-->
 
+                                        <!--Project Category-->
+                                        <div class="ar-work-cat">Photography</div>
+                                        <!--/Project Category-->
                                     </div>
                                     <!--/Project-->
 
                                     <!--Project-->
                                     <div class="ar-work">
 
-                                        <!--Project URL--><a href="">
+                                        <!--Project URL--><a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
+                                            data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-bespin">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image">
                                                 <img alt="Project Image" src="/assets/resources/img/work-quickx.png">
                                             </div>
                                             <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title">Rainbows</div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat">Production</div>
-                                            <!--/Project Category-->
-
                                         </a>
+
+                                        <!--Project Title-->
+                                        <div class="ar-work-title">Rainbows</div>
+                                        <!--/Project Title-->
+
+                                        <!--Project Category-->
+                                        <div class="ar-work-cat">Production</div>
+                                        <!--/Project Category-->
 
                                     </div>
                                     <!--/Project-->
 
                                     <!--Project-->
-                                    <div class="ar-work">
+                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="50"
+                                        data-tilt-speed="20">
                                         <!--Project URL-->
                                         <a href="">
                                             <!--Project Image-->
@@ -999,15 +1005,15 @@
                                                 <img alt="Project Image" src="/assets/resources/img/work-ystart.png">
                                             </div>
                                             <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title">The Silk’s Nothing</div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat">Branding</div>
-                                            <!--/Project Category-->
                                         </a>
+
+                                        <!--Project Title-->
+                                        <div class="ar-work-title">The Silk’s Nothing</div>
+                                        <!--/Project Title-->
+
+                                        <!--Project Category-->
+                                        <div class="ar-work-cat">Branding</div>
+                                        <!--/Project Category-->
                                     </div>
                                     <!--/Project-->
                                 </div>
