--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
                                 </g>
                             </svg>
-                            <p class="small_heading">The Digital Agency For Ambitious Brands</p>
+                            <p class="small_heading">Digital Experience Design Agency For Ambitions Brands </p>
                             <div class="chapt-icon play-icon" style="    width: 100px;">
                                 <!-- <div class="scroll-down" style="    width: 100px;"> -->
                                 <div class="scroll-circle">
@@ -673,8 +673,12 @@
 
                 <section class="about-us-section" data-humcolor="#000">
                     <div class="about-us-inner d-flex">
-                        <div class="about-us-images res"> <img class="prlx" src="/assets/resources/img/about.png" alt=""
-                                title="" />
+                        <div class="about-us-images res">
+                            <!-- <img class="prlx" src="/assets/resources/img/about.png" alt=""
+                                title="" /> -->
+                            <video autoplay preload="" class="prlx">
+                                <source src="/assets/resources/wav.mp4">
+                            </video>
                         </div>
 
                         <div class="about-us-content">
